tests/snapshots/generate_plan_tests__clojure_jdk11.snap
---
source: tests/generate_plan_tests.rs
expression: plan
snapshot_kind: text
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "clojure"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "lein uberjar; if [ -d /app/target/default+uberjar ]; then find /app/target/default+uberjar -name \"*.jar\" -exec mv -t /app/target/ {} +; fi"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "leiningen",
        "jdk11"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "JAR_FILE=$(find /app/target -name \"*-standalone.jar\" -o -name \"*.jar\" ! -name \"*-SNAPSHOT.jar\" | head -n 1) && bash -c \"java $JAVA_OPTS -jar $JAR_FILE\""
  }
}
