tests/snapshots/generate_plan_tests__custom_user.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "echo building"
      ]
    }
  },
  "start": {
    "cmd": "bash start.sh",
    "user": "myuser"
  }
}
