tests/snapshots/generate_plan_tests__elixir_phx_no_ecto.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "ELIXIR_ERL_OPTIONS": "+fnu",
    "MIX_ENV": "prod",
    "NIXPACKS_METADATA": "elixir"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "mix compile",
        "mix assets.deploy"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "mix local.hex --force",
        "mix local.rebar --force",
        "mix deps.get --only prod"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "elixir_1_14",
        "gcc"
      ],
      "nixLibs": [
        "stdenv.cc.cc.lib"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "mix phx.server"
  }
}
