tests/snapshots/generate_plan_tests__node_nx_express.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "variables": {
    "CI": "true",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "npm ci"
      ],
      "cacheDirectories": [
        "/root/.npm",
        "/root/.cache/Cypress"
      ],
      "paths": [
        "/app/node_modules/.bin"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "nodejs"
        },
        {
          "name": "npm-8_x",
          "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
        }
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "npx nx run express-app:build:production"
      ],
      "cacheDirectories": [
        ".next/cache",
        "node_modules/.cache"
      ]
    }
  ],
  "startPhase": {
    "cmd": "node dist/apps/express-app/main.js"
  }
}
